Mining in parallel with data added by miners